--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,26 +81,22 @@ jobs:
   release:
     name: Create Release
     needs: [build, auto_tag]
-    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-    - name: Download build artifacts
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
         name: binaries
         path: build/
-
-    - name: Generate SHA256 checksums
-      run: |
-        cd build/
-        find . -type f -exec sha256sum {} \; > checksums.txt
-
-    - name: Create release
+        
+    - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || env.NEW_TAG }}
-        files: |
-          build/*
+        files: build/*
         generate_release_notes: true 
