--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,11 +36,15 @@ jobs:
     - name: Execute build script
       run: chmod +x build.sh && ./build.sh
 
+    - name: List build directory contents
+      run: ls -la build/
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: binaries
         path: build/
+        if-no-files-found: error
 
   auto_tag:
     name: Auto Tag
@@ -80,20 +84,20 @@ jobs:
 
   release:
     name: Create Release
-    needs: [build, auto_tag]
+    needs: [build]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
         name: binaries
         path: build/
+        
+    - name: List build directory contents
+      run: ls -la build/
         
     - name: Create Release
       uses: softprops/action-gh-release@v1
